# proxTV

./: .codeclimate.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  buildwheels.sh  developer_requirements.txt  install.m  install_octave.m  setup.py  tox.ini
.travis/: build.sh  deploy.sh  installconda.sh
cmake/: FindLAPACKE.cmake  README.md  proxTVConfig.cmake.in
demos/: demo_filter_image.m  demo_filter_image_color.m  demo_filter_image_threads.m  demo_filter_image_weighted.m  demo_filter_signal.m
docs/: Makefile  conf.py  index.rst
matlab/: TV.m  TVL1SecondOrder.cpp  TVL1Weighted.cpp  TVL1Weighted_tautString.cpp  TVgen.m  solveLp_PN.cpp  solveTV.cpp  solveTV1_PN.cpp  solveTV1_classicTautString.cpp  solveTV1_condat.cpp  solveTV1_condattautstring.cpp  solveTV1_hybridTautString.cpp  solveTV1_johnson.cpp  solveTV1_kolmogorov.cpp  solveTV1_linearizedTautString.cpp  solveTV1_tautString.cpp  solveTV2DL1W.cpp  solveTV2D_CondatChambollePock.cpp  solveTV2D_DR.cpp  solveTV2D_Kolmogorov.cpp  solveTV2D_PD.cpp  solveTV2D_Yang.cpp  solveTV2_PGc.cpp  solveTV2_morec.cpp  solveTV2_morec2.cpp  solveTV3D_Yang.cpp  solveTVND_PDR.cpp  solveTVgen.cpp  solveTVp_GPFW.cpp
matlab/demos/: demo_filter_image_threads.m
prox_tv/: __init__.py  _prox_tv.py  prox_tv_build.py  prox_tv_test.py
prox_tv/demos/: demo_filter_image.py  demo_filter_image_color.py  demo_filter_image_threads.py  demo_filter_image_weighted.py  demo_filter_signal.py
src/: .gitignore  CMakeLists.txt  LPopt.cpp  LPopt.h  TV2DWopt.cpp  TV2Dopt.cpp  TVL1SecondOrder.cpp  TVL1Weighted.cpp  TVL1Weighted_tautString.cpp  TVL1Wopt.cpp  TVL1opt.cpp  TVL1opt_hybridtautstring.cpp  TVL1opt_kolmogorov.cpp  TVL1opt_tautstring.cpp  TVL2opt.cpp  TVLPopt.cpp  TVNDopt.cpp  TVgenopt.cpp  TVmacros.h  TVopt.h  condat_fast_tv.cpp  condat_fast_tv.h  general.h  johnsonRyanTV.cpp  johnsonRyanTV.h  lapackFunctionsWrap.cpp  lapackFunctionsWrap.h  makefile  proxtv.cc  proxtv.h  proxtv.i  proxtv.py  proxtv_internal.py  proxtv_wrap.cxx  setup.py  solveTV.cpp  solveTV1_PN.cpp  solveTV1_condat.cpp  solveTV1_johnson.cpp  solveTV1_tautString.cpp  (+16 more)
test/: CMakeLists.txt  test_use_eigen.cpp
test/project_using_proxTV/: CMakeLists.txt  README.md  dummy.cpp
